Work on billing charts

--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -1,1 +1,8 @@
-<account-management-header [path]="'Billing'"></account-management-header>
+<account-management-header
+  [path]="'Billing'"
+  [account]="account">
+</account-management-header>
+
+<div>
+  <account-management-billing-transactions-chart></account-management-billing-transactions-chart>
+</div>
