--- a/src/app/pages/account-management-page/account-management-header/account-management-header.component.scss
+++ b/src/app/pages/account-management-page/account-management-header/account-management-header.component.scss
@@ -52,6 +52,13 @@
         font-weight: 500;
       }
 
+      .title-placeholder {
+        margin: 0 15px;
+        width: 150px;
+        height: 23px;
+        background: rgba(0,0,0,0.2);
+      }
+
       .app-id-container {
         display: flex;
 
