--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -31,5 +31,25 @@
         max-width: 350px;
       }
     }
+
+    .buttons {
+      display: flex;
+
+      button {
+        &:first-of-type {
+          margin-left: auto;
+          margin-right: 10px;
+        }
+
+        &:last-of-type {
+          color: white;
+          background: #2897EF;
+        }
+      }
+
+      .button-disabled {
+        background: rgba(0, 0, 0, 0.26) !important;
+      }
+    }
   }
 }
