Use SVG icons on dashboard.

--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -32,21 +32,21 @@
           <div class="column__header">{{'DASHBOARD_STATE_SETUP_ACCOUNT_TITLE' | translate}}</div>
 
           <div class="segment">
-            <img src="/assets/images/dashboard/person.png">
+            <img src="/assets/images/dashboard/person.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/profile']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/group_add.png">
+            <img src="/assets/images/dashboard/group_add.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/accounts/' + accountId]" fragment="users">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/attach_money.png">
+            <img src="/assets/images/dashboard/attach_money.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_DESCRIPTION' | translate}}</div>
@@ -58,28 +58,28 @@
           <div class="column__header">{{'DASHBOARD_STATE_SETUP_PROVIDERS_TITLE' | translate}}</div>
 
           <div class="segment">
-            <img src="/assets/images/dashboard/local_atm.png">
+            <img src="/assets/images/dashboard/local_atm.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/merchantproviders']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_MERCHANT_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_MERCHANT_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/local_shipping.png">
+            <img src="/assets/images/dashboard/local_shipping.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/fulfillmentproviders']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_FULFILLMENT_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_FULFILLMENT_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/mail_outline.png">
+            <img src="/assets/images/dashboard/mail_outline.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/smtpproviders']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_SMTP_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_SMTP_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/settings.png">
+            <img src="/assets/images/dashboard/settings.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/documentation/graph']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_API_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_API_DESCRIPTION' | translate}}</div>
@@ -91,21 +91,21 @@
           <div class="column__header">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_TITLE' | translate}}</div>
 
           <div class="segment">
-            <img src="/assets/images/dashboard/shopping_cart.png">
+            <img src="/assets/images/dashboard/shopping_cart.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/products']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/date_range.png">
+            <img src="/assets/images/dashboard/date_range.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/productschedules']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <img src="/assets/images/dashboard/language.png">
+            <img src="/assets/images/dashboard/language.svg">
             <div class="segment__content">
               <div class="title" [routerLink]="['/campaigns']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_CAMPAIGNS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_CAMPAIGNS_DESCRIPTION' | translate}}</div>
