Finishing account management users

--- a/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
+++ b/src/app/pages/account-management-page/account-management-apikeys/account-management-apikeys.component.html
@@ -1,1 +1,1 @@
-<account-management-header [path]="'API Keys'"></account-management-header>
+<account-management-header [path]="['API Keys']"></account-management-header>
