--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
@@ -1,5 +1,5 @@
 <account-management-header
-  [path]="'General'"
+  [path]="['General']"
   [account]="account"
   [showApiKey]="true">
 </account-management-header>
