--- a/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.html
+++ b/src/app/pages/account-management-page/account-management-roles/account-management-roles.component.html
@@ -1,1 +1,1 @@
-<account-management-header [path]="'Roles'"></account-management-header>
+<account-management-header [path]="['Roles']"></account-management-header>
