--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -82,4 +82,14 @@ mat-dialog-container {
   .simple-dropdown__header {
     color: #2C98F0 !important;
   }
+
+}
+
+.backdrop-blue {
+  background: $main-color;
+  opacity: 0.65 !important;
+
+  mat-dialog-container {
+    padding: 0 !important;
+  }
 }
