--- a/src/app/pages/account-management-page/account-management-users/account-management-users.component.scss
+++ b/src/app/pages/account-management-page/account-management-users/account-management-users.component.scss
@@ -40,6 +40,8 @@
     padding: 18px;
     box-sizing: border-box;
     background: white;
+    border-radius: 4px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,0.12);
 
     @media only screen and (max-width: 1200px) {
       width: calc(50% - 24px);
