--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -1,12 +1,12 @@
-<ng-container *ngIf="activeDashboard !== undefined && availableDashboards.length > 1; else setup">
+<ng-container>
   <div class="blue-tab-header">
-    <div class="blue-tab-header__item" [class.blue-tab-header__item--active]="activeDashboard === 0" (click)="setIndex(0)">
+    <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 0" (click)="setIndex(0)">
       SETUP
     </div>
-    <div class="blue-tab-header__item" [class.blue-tab-header__item--active]="activeDashboard === 1" (click)="setIndex(1)">
+    <div class="blue-tab-header__item" *ngIf="availableDashboards.includes(DashboardType.low_data)" [class.blue-tab-header__item--active]="activeDashboard === 1" (click)="setIndex(1)">
       TRANSACTIONS
     </div>
-    <div class="blue-tab-header__item" [class.blue-tab-header__item--active]="activeDashboard === 2" (click)="setIndex(2)">
+    <div class="blue-tab-header__item" *ngIf="availableDashboards.includes(DashboardType.full)" [class.blue-tab-header__item--active]="activeDashboard === 2" (click)="setIndex(2)">
       DASHBOARD
     </div>
   </div>
@@ -26,7 +26,3 @@
     </mat-tab>
   </mat-tab-group>
 </ng-container>
-
-<ng-template #setup>
-  <c-dashboard-setup></c-dashboard-setup>
-</ng-template>
