--- a/src/app/dialog-modals/invite-dialog/invite-dialog.component.html
+++ b/src/app/dialog-modals/invite-dialog/invite-dialog.component.html
@@ -4,34 +4,40 @@
 
   <div class="body">
 
-    <div class="item">
-      <mat-input-container [floatLabel]="'never'" [class.error]="formInvalid && !email">
-        <input type="text" matInput [(ngModel)]="email" placeholder="Email">
-      </mat-input-container>
+    <mat-input-container>
+      <input type="text" matInput [(ngModel)]="firstName" placeholder="First Name">
+    </mat-input-container>
 
-      <div class="roles" [matMenuTriggerFor]="rolesMenu" [class.error]="formInvalid && !selectedRole.id">
-        <div [class.unselected]="!selectedRole.name" [class.error]="formInvalid && !selectedRole.id">{{selectedRole.name || 'Select a role'}}</div>
-        <mat-icon class="roles__arrow">keyboard_arrow_down</mat-icon>
-      </div>
-      <mat-menu #rolesMenu="matMenu" x-position="before">
-        <button class="menu-button" *ngFor="let sharedRole of sharedRoles" mat-menu-item (click)="setRole(sharedRole)">
-          <div class="check-container">
-            <mat-icon class="check-container__icon" *ngIf="sharedRole.id === selectedRole.id">done</mat-icon>
-          </div>
-          <div>{{sharedRole.name}}</div>
-          <img src="/assets/images/logo-navigation-small.svg" alt="">
-        </button>
+    <mat-input-container>
+      <input type="text" matInput [(ngModel)]="lastName" placeholder="Last Name">
+    </mat-input-container>
 
-        <div class="separator"></div>
+    <mat-input-container [class.error]="formInvalid && !email">
+      <input type="text" matInput [(ngModel)]="email" placeholder="Email">
+    </mat-input-container>
 
-        <button class="menu-button" *ngFor="let role of roles" mat-menu-item (click)="setRole(role)">
-          <div class="check-container">
-            <mat-icon class="check-container__icon" *ngIf="role.id === selectedRole.id">done</mat-icon>
-          </div>
-          <div>{{role.name}}</div>
-        </button>
-      </mat-menu>
+    <div class="roles" [matMenuTriggerFor]="rolesMenu" [class.error]="formInvalid && !selectedRole.id">
+      <div [class.unselected]="!selectedRole.name" [class.error]="formInvalid && !selectedRole.id">{{selectedRole.name || 'Select a role'}}</div>
+      <mat-icon class="roles__arrow">keyboard_arrow_down</mat-icon>
     </div>
+    <mat-menu #rolesMenu="matMenu" x-position="before">
+      <button class="menu-button" *ngFor="let sharedRole of sharedRoles" mat-menu-item (click)="setRole(sharedRole)">
+        <div class="check-container">
+          <mat-icon class="check-container__icon" *ngIf="sharedRole.id === selectedRole.id">done</mat-icon>
+        </div>
+        <div>{{sharedRole.name}}</div>
+        <img src="/assets/images/logo-navigation-small.svg" alt="">
+      </button>
+
+      <div class="separator"></div>
+
+      <button class="menu-button" *ngFor="let role of roles" mat-menu-item (click)="setRole(role)">
+        <div class="check-container">
+          <mat-icon class="check-container__icon" *ngIf="role.id === selectedRole.id">done</mat-icon>
+        </div>
+        <div>{{role.name}}</div>
+      </button>
+    </mat-menu>
 
   </div>
 
