--- a/src/app/dialog-modals/invite-dialog/invite-dialog.component.scss
+++ b/src/app/dialog-modals/invite-dialog/invite-dialog.component.scss
@@ -1,50 +1,47 @@
 .container {
   font-family: Roboto, serif;
   margin: -24px;
-}
+  background: #FAFAFA;
+  border-radius: 4px;
 
-.title {
-  padding: 45px 25px;
-  font-size: 20px;
-  font-weight: 500;
-  border-bottom: 1px solid rgba(0,0,0,0.12);
-}
+  .title {
+    padding: 40px 25px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    background: white;
+    border-radius: 4px 4px 0 0;
+    font-size: 20px;
+    font-weight: 500;
+  }
 
-.body {
-  padding: 25px;
-
-  .item {
-    padding: 15px;
-    background: rgba(44, 152, 240, 0.2);
-    font-size: 14px;
+  .body {
+    display: flex;
+    flex-direction: column;
+    padding: 35px 80px;
 
     mat-input-container {
-      width: 100%;
+      font-size: 16px;
+      width: 320px;
     }
   }
 
-}
+  .buttons {
+    display: flex;
+    margin-top: 25px;
+    padding: 0 25px 35px;
 
+    button {
+      &:first-of-type {
+        margin-left: auto;
+        margin-right: 15px;
+        color: #2C98F0;
+      }
 
-.buttons {
-  display: flex;
-  padding: 15px 25px 25px;
-
-  button {
-    font-size: 14px;
-
-    &:first-of-type{
-      margin-left: auto;
-      margin-right: 15px;
-      color: #2C98F0;
-    }
-
-    &:last-of-type {
-      background: #2C98F0;
-      color: #ffffff;
+      &:last-of-type {
+        color: #ffffff;
+        background: #2C98F0;
+      }
     }
   }
-
 }
 
 .unselected {
@@ -59,7 +56,7 @@
   display: flex;
   align-items: center;
   margin-top: 15px;
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
   border-bottom: 1px solid rgba(0, 0, 0, 0.42);
 
