--- a/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
+++ b/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
@@ -1,19 +1,25 @@
+<div *ngIf="menuItem.separator" class="menu-separator"></div>
+
 <a mat-list-item [class.icon--solo]="!full" *ngIf="!hasLink && !hasChildren && !hasQuery" (click)="clicked($event)">
   <mat-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</mat-icon>
+  <img class="menu-item-image" *ngIf="menuItem.image" src="{{menuItem.image}}">
   <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate }}</span>
 </a>
 <a mat-list-item [class.item-selected]="selected" [class.icon--solo]="!full" *ngIf="hasLink && !hasChildren && !hasQuery" routerLinkActive="active" (toggle)="true" (click)="clicked($event)">
   <div class="placeholder"></div>
   <mat-icon class="image-icon" *ngIf='menuItem.icon'>{{menuItem.icon}}</mat-icon>
+  <img class="menu-item-image" *ngIf="menuItem.image" src="{{menuItem.image}}">
   <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate}}</span>
 </a>
 <a mat-list-item [class.icon--solo]="!full" *ngIf="hasClickHandler" routerLinkActive="active" (toggle)="true" (click)="menuItem.clickHandler()">
   <mat-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</mat-icon>
+  <img class="menu-item-image" *ngIf="menuItem.image" src="{{menuItem.image}}">
   <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title | translate}}</span>
 </a>
 <a mat-list-item [class.icon--solo]="!full" class="nav-dropdown" *ngIf="hasChildren" (click)="toggleDropdown(!active)" [ngClass]="{ 'active' : level > 1 || (active && full) }">
   <div class="placeholder"></div>
   <mat-icon *ngIf='menuItem.icon'>{{menuItem.icon}}</mat-icon>
+  <img class="menu-item-image" *ngIf="menuItem.image" src="{{menuItem.image}}">
   <span class="sidenav-item__text" *ngIf="full">{{ menuItem?.title | translate}}</span>
   <mat-icon class="icon--more" [class.icon--more--rotate]="active" *ngIf="level === 1 && full">keyboard_arrow_down</mat-icon>
 </a>
