--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -3,10 +3,10 @@
     <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 0" (click)="setIndex(0)">
       SETUP
     </div>
-    <div class="blue-tab-header__item" *ngIf="availableDashboards.includes(DashboardType.low_data)" [class.blue-tab-header__item--active]="activeDashboard === 1" (click)="setIndex(1)">
+    <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 1" (click)="setIndex(1)">
       TRANSACTIONS
     </div>
-    <div class="blue-tab-header__item" *ngIf="availableDashboards.includes(DashboardType.full)" [class.blue-tab-header__item--active]="activeDashboard === 2" (click)="setIndex(2)">
+    <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 2" [class.blue-tab-header__item--active]="activeDashboard === 2" (click)="setIndex(2)">
       DASHBOARD
     </div>
   </div>
@@ -18,10 +18,10 @@
     <mat-tab>
       <c-dashboard-setup></c-dashboard-setup>
     </mat-tab>
-    <mat-tab [hidden]="!availableDashboards.includes(DashboardType.low_data)">
+    <mat-tab [hidden]="availableDashboards.length < 2">
       <c-dashboard-low-data [renderChart]="renderLow"></c-dashboard-low-data>
     </mat-tab>
-    <mat-tab [hidden]="!availableDashboards.includes(DashboardType.full)">
+    <mat-tab [hidden]="availableDashboards.length < 3">
       <c-dashboard-full [renderCharts]="renderFull"></c-dashboard-full>
     </mat-tab>
   </mat-tab-group>
