Initial work on customer graph

--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -4,5 +4,5 @@
 </account-management-header>
 
 <div>
-  <account-management-billing-transactions-chart></account-management-billing-transactions-chart>
+  <account-management-billing-transactions-chart [lastBill]="lastBill"></account-management-billing-transactions-chart>
 </div>
