--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.html
@@ -9,11 +9,15 @@
   <div class="details">
 
     <div class="box">
-      <div class="date">Next Billing: April 30, 2018</div>
+      <div class="date" *ngIf="nextBillDate">
+        Next Billing: {{nextBillDate | formatDateTime: 'MMMM DD, YYYY'}}
+      </div>
     </div>
 
     <div class="box">
-      <div class="date">Previous Billing: May 30, 2018</div>
+      <div class="date" *ngIf="lastBillDate">
+        Previous Billing: {{lastBillDate | formatDateTime: 'MMMM DD, YYYY'}}
+      </div>
     </div>
 
   </div>
