--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -53,3 +53,46 @@
     }
   }
 }
+
+.credit-card {
+  display: flex;
+  align-items: center;
+  margin: 20px 20px 20px 0;
+
+  img {
+    height: 60px;
+    margin-right: 16px;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+
+    .number {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 24px;
+    }
+
+    .data {
+      font-size: 13px;
+      line-height: 24px;
+    }
+  }
+
+  .actions {
+    margin-left: auto;
+
+    mat-icon {
+      margin-left: 10px;
+      padding: 4px;
+      height: 20px;
+      width: 20px;
+      border-radius: 2px;
+      font-size: 22px;
+      cursor: pointer;
+      background: rgba(0, 0, 0, 0.12);
+      color: rgba(0, 0, 0, 0.54);
+    }
+  }
+}
