Dashboard animations, fix latest transactions, fix graphs when switching accounts.

--- a/src/app/pages/customer-service-page/customer-service-dashboard/customer-service-dashboard.component.scss
+++ b/src/app/pages/customer-service-page/customer-service-dashboard/customer-service-dashboard.component.scss
@@ -66,3 +66,9 @@
     background: #4478BE;
   }
 }
+
+.animation-wrapper {
+  min-height: calc(100vh - 70px);
+  min-width: 100%;
+  background: #4478BE;
+}
