--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -1,28 +1,32 @@
-<ng-container>
-  <div class="blue-tab-header">
-    <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 0" (click)="setIndex(0)">
-      SETUP
-    </div>
-    <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 1" (click)="setIndex(1)">
-      TRANSACTIONS
-    </div>
-    <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 2" [class.blue-tab-header__item--active]="activeDashboard === 2" (click)="setIndex(2)">
-      DASHBOARD
-    </div>
-  </div>
+<div class="animation-wrapper">
+  <div *ngIf="show" [@routerTransition]="transition">
+    <ng-container>
+      <div class="blue-tab-header">
+        <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 0" (click)="setIndex(0)">
+          SETUP
+        </div>
+        <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 1" [class.blue-tab-header__item--active]="activeDashboard === 1" (click)="setIndex(1)">
+          TRANSACTIONS
+        </div>
+        <div class="blue-tab-header__item" *ngIf="availableDashboards.length > 2" [class.blue-tab-header__item--active]="activeDashboard === 2" (click)="setIndex(2)">
+          DASHBOARD
+        </div>
+      </div>
 
-  <mat-tab-group
-    class="tab--dashboard-header tab--no-header"
-    [(selectedIndex)]="activeDashboard"
-  >
-    <mat-tab>
-      <c-dashboard-setup></c-dashboard-setup>
-    </mat-tab>
-    <mat-tab [hidden]="availableDashboards.length < 2">
-      <c-dashboard-low-data [renderChart]="renderLow"></c-dashboard-low-data>
-    </mat-tab>
-    <mat-tab [hidden]="availableDashboards.length < 3">
-      <c-dashboard-full [renderCharts]="renderFull"></c-dashboard-full>
-    </mat-tab>
-  </mat-tab-group>
-</ng-container>
+      <mat-tab-group
+        class="tab--dashboard-header tab--no-header"
+        [(selectedIndex)]="activeDashboard"
+      >
+        <mat-tab>
+          <c-dashboard-setup></c-dashboard-setup>
+        </mat-tab>
+        <mat-tab [hidden]="availableDashboards.length < 2">
+          <c-dashboard-low-data [renderChart]="renderLow"></c-dashboard-low-data>
+        </mat-tab>
+        <mat-tab [hidden]="availableDashboards.length < 3">
+          <c-dashboard-full [renderCharts]="renderFull"></c-dashboard-full>
+        </mat-tab>
+      </mat-tab-group>
+    </ng-container>
+  </div>
+</div>
