--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.html
@@ -12,11 +12,31 @@
       <div class="date" *ngIf="nextBillDate">
         Next Billing: {{nextBillDate | formatDateTime: 'MMMM DD, YYYY'}}
       </div>
+
+      <div class="minimum">
+        <div>Minimum monthly fee</div>
+        <div>{{getPlanPrice().usd()}}</div>
+      </div>
+
+      <div class="amount" *ngIf="nextBillDate">
+        <div>Total to be billed as of today</div>
+        <div>{{getPlanPrice().usd()}}</div>
+      </div>
     </div>
 
     <div class="box">
       <div class="date" *ngIf="lastBillDate">
         Previous Billing: {{lastBillDate | formatDateTime: 'MMMM DD, YYYY'}}
+      </div>
+
+      <div class="minimum">
+        <div>Minimum monthly fee</div>
+        <div>{{getPlanPrice().usd()}}</div>
+      </div>
+
+      <div class="amount" *ngIf="lastBillAmount">
+        <div>Total billed</div>
+        <div>{{lastBillAmount.usd()}}</div>
       </div>
     </div>
 
