--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.scss
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.scss
@@ -21,6 +21,8 @@
     width: calc(35% - 12px);
 
     .box {
+      display: flex;
+      flex-direction: column;
       padding: 20px;
       background: #4F4F4F;
       border-radius: 4px;
@@ -32,6 +34,34 @@
         color: white;
         font-size: 20px;
         font-weight: 500;
+      }
+
+      .minimum {
+        display: flex;
+        margin-bottom: 12px;
+        font-size: 16px;
+        color: rgba(255, 255, 255, 0.6);
+        margin-top: auto;
+
+        div {
+          &:last-of-type {
+            margin-left: auto;
+          }
+        }
+      }
+
+      .amount {
+        display: flex;
+        padding-top: 12px;
+        border-top: 1px solid rgba(0, 0, 0, 0.42);
+        font-size: 16px;
+        color: rgba(255, 255, 255, 0.6);
+
+        div {
+          &:last-of-type {
+            margin-left: auto;
+          }
+        }
       }
 
       &:first-of-type {
