--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.scss
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.scss
@@ -30,6 +30,10 @@
       width: 100%;
       box-sizing:  border-box;
 
+      &--error {
+        background: #DC2547;
+      }
+
       .date {
         color: white;
         font-size: 20px;
