--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -57,7 +57,7 @@
 .credit-card {
   display: flex;
   align-items: center;
-  margin: 20px 20px 20px 0;
+  margin: 20px 0;
 
   img {
     height: 60px;
